order form added in cart

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -69,6 +69,22 @@
 
 </div>
 
+<!-- Section Order Form -->
+
 <div class="container mt-5 mb-5 form-bottom">
-    <h1 class="mt-5 mb-5">Order Form</h1>
+    <h1 class="mt-5 mb-3">Order Form</h1>
+    <p>please fill up the info for the delivery</p>
+    <hr>
+    <form>
+        <div class="mb-3">
+            <label for="exampleInputNamel1" class="form-label">Name</label>
+            <input type="text" class="form-control" id="exampleInputNamel1" aria-describedby="nameHelp">
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputAdress1" class="form-label">Adress</label>
+            <input type="text" class="form-control" id="exampleInputAdress1">
+        </div>
+        <button type="submit" class="btn btn-primary">Purchase</button>
+    </form>
 </div>
+
