--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -14,11 +14,16 @@
                 <p class="card-text" *ngIf="product.description">
                     {{ product.description }}
                 </p>
+                <hr>
                 <h4>{{ product.price | currency:'EUR' }}</h4>
-                <div *ngIf="product">
+                <hr>
+                <div *ngIf="product.availability == true; else donotshow">
                     <button type="button" class="btn btn-primary rounded me-3"  routerLink="products/{{productId}}">Details</button>
                     <button type="button" class="btn btn-success rounded" (click)="addToCart()">Order</button>
                 </div>
+                <ng-template #donotshow>
+                    <p class="text-danger">This product is not available.</p>
+                </ng-template>
             </div>
 
 
