added buttons cart forward back detail navbar

--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -14,5 +14,6 @@
 
 </div>
 <div class="d-flex justify-content-center m-5">
-  <button type="button" class="btn btn-secondary rounded" routerLink="/menu"><i class="fa-solid fa-backward"></i>&nbsp; Go back to MENU</button>
+  <button type="button" class="btn btn-outline-secondary rounded" routerLink="/menu"><i class="fa-solid fa-backward"></i>&nbsp; Go back to MENU</button>&nbsp;
+  <button type="button" class="btn btn-outline-secondary rounded" routerLink="/cart">&nbsp; Go to CART &nbsp;<i class="fa-solid fa-forward"></i></button>
 </div>
