--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top align-items-center colorturkislight">
 
-    <a href="#" class="navbar-brand navbar-dark colorturkislight ms-3"><img src="../assets/img/logo.svg" alt="" height="50vh"></a>
+    <a href="" class="navbar-brand navbar-dark colorturkislight ms-3"><img src="../assets/img/logo.svg" alt="" height="50vh"></a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
         <span class="navbar-toggler-icon"></span>
@@ -15,7 +15,10 @@
             <li class="nav-item"><a routerLink="/menu" class="nav-link colorturkislight">Menu</a></li>
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" routerLink="/cart">Cart {{count}}</button>
         </ul>
-        
+        <button routerLink="cart" class="btn btn-outline-primary ">
+            <i style="font-size: 1.8rem;" class="fa-solid fa-cart-plus"></i>&nbsp;
+            <div style="font-size: 10px;" class="badge badge-pill bg-danger">{{count}}</div>
+        </button>
         
     </div>
 
