made responsive card correction

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -5,7 +5,7 @@
     <!-- Section Cart Items -->
 
     <div class="row">
-        <div class="col-8">
+        <div class="col-md-8 col-sm-12">
             <div class="card-product">
                 <table class="table table-responsive bg-light">
                     <thead>
@@ -27,7 +27,7 @@
 
         <!-- Section Summary -->
 
-        <div class="col-4 mt-2">
+        <div class="col-md-4 col-sm-12 mt-2">
 
             <ul class="list-group mb-3">
                 <li class="list-group-item d-flex justify-content-between bg-secondary">
