--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -2,3 +2,8 @@ h2 {
     font-family: 'Great Vibes', cursive;
     font-size: 3rem;
 }
+
+h3 {
+    font-family: 'Great Vibes', cursive;
+    font-size: 2.5rem;
+}
